--- a/geoavalanche/templates/site_index.html
+++ b/geoavalanche/templates/site_index.html
@@ -7,8 +7,9 @@ This is where you can override the hero area block. You can simply modify the co
   <div class="jumbotron">
     <div class="container">
       <h1>{% trans "Welcome" %}</h1>
-      <p>{% blocktrans %}GeoNode is an open source platform for sharing geospatial data and maps.{% endblocktrans %}</p>
-      <p>{% blocktrans %}If you have any questions about the software or service, join our <a href="https://groups.google.com/d/forum/geonode-users">mailing list</a>.{% endblocktrans %}</p>
+      <p>{% blocktrans %}GeoAvalanche is a snow avalanche information system for sharing geospatial data and maps about the risk in the mountains you are going to visit.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Every avalanche has a place{% endblocktrans %}</p>
+      <p>{% blocktrans %}If you have any questions about the system, join our <a href="https://groups.google.com/d/forum/geoavalanche-users">mailing list</a>.{% endblocktrans %}</p>
       <span>{% trans 'Need help?' %} <a href="http://docs.geonode.org/en/latest/tutorials/users/quickstart/index.html">{% trans 'Getting Started' %}</a></span>
     </div>
   </div>
