--- a/geoavalanche/static/css/bootswatch.css
+++ b/geoavalanche/static/css/bootswatch.css
@@ -4505,7 +4505,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #999999;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #1F9EE5;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
