--- a/geoavalanche/static/css/bootswatch.css
+++ b/geoavalanche/static/css/bootswatch.css
@@ -3085,8 +3085,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #158cba;
-  border-color: #127ba3;
+  background-color: #1F9EE5;
+  border-color: #0A8CD2;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -6620,8 +6620,8 @@ button.close {
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-group.open .dropdown-toggle.btn-primary {
-  background-color: #158cba;
-  border-color: #127ba3;
+  background-color: #1F9EE5;
+  border-color: #0A8CD2;
 }
 .btn-success:hover,
 .btn-success:focus,
