--- a/geoavalanche/static/css/site_base.css
+++ b/geoavalanche/static/css/site_base.css
@@ -1,8 +1,8 @@
 .navbar-brand {
-  background: url(../img/logo_ga.png) 0px 0 no-repeat;
+  background: url(../img/logo_ga.png) 0px 0px no-repeat;
   height: 70px;
   margin-right: 15px;
-  margin-top: 10px;
+  margin-top: 0px;
   text-indent: -9999em;
   width: 150px;
 }
@@ -54,3 +54,21 @@ body.groups li#nav_groups a {
 .home-facets a:hover {
   color: #1890D2;
 }
+
+/* Customize footer */
+.footer {
+  border-top: 1px solid #999;
+  padding: 60px;
+  background-color: #000;
+}
+
+/* Customize Contact Us form */
+div.form-group.col-lg-12 {
+  margin-left: -30px;
+}
+
+/* Add line to divide footer */
+.col-xs-12 hr {
+  border-color: #555 -moz-use-text-color -moz-use-text-color;
+}
+
