--- a/geoavalanche/templates/site_base.html
+++ b/geoavalanche/templates/site_base.html
@@ -2,4 +2,5 @@
 {% block extra_head %}
       <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
       <link href="{{ STATIC_URL }}css/bootswatch.css" rel="stylesheet"/>
+      <link href="{{ STATIC_URL }}css/social.css" rel="stylesheet" />
 {% endblock %}
