--- a/geoavalanche/templates/base.html
+++ b/geoavalanche/templates/base.html
@@ -151,32 +151,7 @@
               		<a href="#"> Lorem Ipsum </a> <!-- #@TODO Add translation -->
                 </p>
         	    </div>
-        	    <div class="col-lg-5">
-              	<h4>Contact us</h4> <!-- #@TODO Add translation -->
-         	      <div class="form-group col-lg-12">
-        		        <label for="contact-name" class="col-lg-2 control-label">Name</label>  <!-- #@TODO Add translation -->
-        			      <div class="col-lg-10">
-        				        <input class="form-control" id="contact-name" placeholder="Name" type="text">
-        					  </div>
-        				</div>
-        			  <div class="form-group col-lg-12">
-        						<label for="contact-email" class="col-lg-2 control-label">Email address</label> <!-- #@TODO Add translation -->
-  				          <div class="col-lg-10">
-  						          <input class="form-control" id="contact-email" placeholder="Email address" type="email">
-  							    </div>
-        				</div>
-    					  <div class="form-group col-lg-12">
-  						      <label for="contact-message" class="col-lg-2 control-label">Message</label> <!-- #@TODO Add translation -->
-  						      <div class="col-lg-10">
-  								      <textarea name="contact-message" id="contact-message" class="form-control" cols="30" rows="10" placeholder="Message"></textarea>
-  								  </div>
-  							</div>
-    			      <div class="form-group col-lg-12">
-  				          <div class="col-lg-10 col-lg-offset-2">
-  						          <button type="submit" class="btn btn-primary">Send Message</button> <!-- #@TODO Add translation -->
-  							    </div>
-    						</div>
-        	    </div>
+              {% include "contactus.html" %}
         	    <div class="col-lg-3">
                 <h4>Latest tweets </h4>
                 <p>
