--- a/geoavalanche/templates/site_base.html
+++ b/geoavalanche/templates/site_base.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block extra_head %}
-      <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
-      <link href="{{ STATIC_URL }}css/bootswatch.css" rel="stylesheet"/>
-      <link href="{{ STATIC_URL }}css/social.css" rel="stylesheet" />
+	<link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
+	<link href="{{ STATIC_URL }}css/bootswatch.css" rel="stylesheet"/>
+	<link href="{{ STATIC_URL }}css/social.css" rel="stylesheet"/>
+	<link href="{{ STATIC_URL }}css/slider.css" rel="stylesheet"/>
 {% endblock %}
