Reorganize static files in the specific folder geoavalanche
Rationale is the collection at runtime into geonode

--- a/geoavalanche/templates/_slider.html
+++ b/geoavalanche/templates/_slider.html
@@ -8,7 +8,7 @@
         <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
             top: 0px; left: 0px; width: 100%; height: 100%;">
         </div>
-        <div style="position: absolute; display: block; background: url({{ STATIC_URL }}img/loading.gif) no-repeat center center;
+        <div style="position: absolute; display: block; background: url({{ STATIC_URL }}geoavalanche/img/loading.gif) no-repeat center center;
             top: 0px; left: 0px; width: 100%; height: 100%;">
         </div>
     </div>
@@ -16,20 +16,20 @@
     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px;
         height: 500px; overflow: hidden;">
         <div>
-            <img u="image" src="{{ STATIC_URL }}img/1920/bg-slide-3.jpg" />
+            <img u="image" src="{{ STATIC_URL }}geoavalanche/img/1920/bg-slide-3.jpg" />
             <div u="caption" t="NO" t3="RTT|2" r3="137.5%" du3="3000" d3="500" style="position: absolute; width: 445px; height: 300px; top: 100px; left: 600px;">
-                <img src="{{ STATIC_URL }}img/new-site/ga-phone.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
-                <img u="caption" t="CLIP|LR" du="4000" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-trails.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
-                <img u="caption" t="ZMF|10" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-peak.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
-                <img u="caption" t="RTT|10" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-trees.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
-                <img u="caption" t="T" du="4000" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-pins.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
+                <img src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-phone.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
+                <img u="caption" t="CLIP|LR" du="4000" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-trails.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
+                <img u="caption" t="ZMF|10" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-peak.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
+                <img u="caption" t="RTT|10" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-trees.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
+                <img u="caption" t="T" du="4000" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-pins.png" style="position: absolute; width: 512px; height: 456px; top: -100px; left: 0px;" />
             </div>
             <div u="caption" t="RTT|2" r="-75%" du="1600" d="2500" t2="NO" style="position: absolute; width: 470px; height: 220px; top: 120px; left: 650px;">
-                <img src="{{ STATIC_URL }}img/new-site/ga-phone-vertical.png" style="position: absolute; width: 221px; height: 410px; top: -80px; left: -20px;" />
-                <img u="caption" t3="MCLIP|L" du3="2000" src="{{ STATIC_URL }}img/new-site/ga-app-1.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
-                <img u="caption" t="MCLIP|R" du="2000" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-app-2.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
-                <img u="caption" t="MCLIP|R" du="2000" t2="NO" src="{{ STATIC_URL }}img/new-site/ga-app-3.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
-                <img u="caption" t="RTTL|BR" x="500%" y="500%" du="1000" d="-3000" r="-30%" t3="L" x3="70%" du3="1600" src="{{ STATIC_URL }}img/new-site/c-finger-pointing.png" style="position: absolute; width: 257px; height: 300px; top: 80px; left: 200px;" />
+                <img src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-phone-vertical.png" style="position: absolute; width: 221px; height: 410px; top: -80px; left: -20px;" />
+                <img u="caption" t3="MCLIP|L" du3="2000" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-app-1.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
+                <img u="caption" t="MCLIP|R" du="2000" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-app-2.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
+                <img u="caption" t="MCLIP|R" du="2000" t2="NO" src="{{ STATIC_URL }}geoavalanche/img/new-site/ga-app-3.png" style="position: absolute; width: 214px; height: 330px; top: -40px; left: -16px;" />
+                <img u="caption" t="RTTL|BR" x="500%" y="500%" du="1000" d="-3000" r="-30%" t3="L" x3="70%" du3="1600" src="{{ STATIC_URL }}geoavalanche/img/new-site/c-finger-pointing.png" style="position: absolute; width: 257px; height: 300px; top: 80px; left: 200px;" />
             </div>
             <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
                 text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div>
-            <img u="image" src="{{ STATIC_URL }}img/1920/bg-slide-9.jpg" />
+            <img u="image" src="{{ STATIC_URL }}geoavalanche/img/1920/bg-slide-9.jpg" />
             <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
                 text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
                     color: #FFFFFF;">Ecosystem of geospatial applications
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div>
-            <img u="image" src="{{ STATIC_URL }}img/1920/bg-slide-11.jpg" />
+            <img u="image" src="{{ STATIC_URL }}geoavalanche/img/1920/bg-slide-11.jpg" />
             <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
                 text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
                     color: #FFFFFF;">Capture, Process, Share
@@ -90,7 +90,7 @@
             line-height: 19px;
             color: white;
             font-size: 12px;
-            background: url({{ STATIC_URL }}img/b21.png) no-repeat;
+            background: url({{ STATIC_URL }}geoavalanche/img/b21.png) no-repeat;
             overflow: hidden;
             cursor: pointer;
         }
@@ -125,7 +125,7 @@
             width: 55px;
             height: 55px;
             cursor: pointer;
-            background: url({{ STATIC_URL }}img/a21.png) center center no-repeat;
+            background: url({{ STATIC_URL }}geoavalanche/img/a21.png) center center no-repeat;
             overflow: hidden;
         }
         .jssora21l { background-position: -3px -33px; }
