--- a/geoavalanche/templates/_slider_js.html
+++ b/geoavalanche/templates/_slider_js.html
@@ -1,13 +1,13 @@
 <!-- custom loads -->
-<script src="{{ STATIC_URL }}js/docs.min.js"></script>
+<script src="{{ STATIC_URL }}geoavalanche/js/docs.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ STATIC_URL }}js/ie10-viewport-bug-workaround.js"></script>
+<script src="{{ STATIC_URL }}geoavalanche/js/ie10-viewport-bug-workaround.js"></script>
 <!-- jssor slider scripts-->
 <!-- use jssor.js + jssor.slider.js instead for development -->
 <!-- jssor.slider.mini.js = (jssor.js + jssor.slider.js) -->
-<script type="text/javascript" src="{{ STATIC_URL }}js/jssor.slider.mini.js"></script>
-<!-- <script type="text/javascript" src="{{ STATIC_URL }}js/jssor.js"></script> -->
-<!-- <script type="text/javascript" src="{{ STATIC_URL }}js/jssor.slider.js"></script> -->
+<script type="text/javascript" src="{{ STATIC_URL }}geoavalanche/js/jssor.slider.mini.js"></script>
+<!-- <script type="text/javascript" src="{{ STATIC_URL }}geoavalanche/js/jssor.js"></script> -->
+<!-- <script type="text/javascript" src="{{ STATIC_URL }}geoavalanche/js/jssor.slider.js"></script> -->
 <script>
     jQuery(document).ready(function ($) {
 
