--- a/geoavalanche/templates/contactus.html
+++ b/geoavalanche/templates/contactus.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <!-- {% block extra_head %}
-<script type="text/javascript" src="{{ STATIC_URL }}js/mymodal.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}geoavalanche/js/mymodal.js"></script>
 {% endblock %} -->
 
 <form id="contact" action="contact/" method="post" accept-charset="utf-8">
